--- a/web120/fp/css/fp.css
+++ b/web120/fp/css/fp.css
@@ -1,82 +1,272 @@
-/* Global rules */
+/* FP Website */
+
+html {
+    background-color: #fff;
+}
+
+
+
+/* START DESKTOP NAV STYLES */
+
+#desktopnav {
+  display: flex;
+  width: 100%;
+  height: 20%;
+  align-items: center;
+  justify-content: space-around;
+  padding-top: 2em;
+  padding-bottom:2em;
+    
+}
+
+nav a {
+    color:#C780C8;
+}
+
+#logo {
+    width: 200px;
+    height: 105px;
+}
+
+/* END DESKTOP NAV STYLES */
+
+
+/* START MOBILE NAV STYLES */
+
 .topnav {
-    margin: auto;
-    background-color: white;
-    overflow: auto;
+  overflow: hidden;
+  background-color: #fff;
 }
 
 .topnav a {
-    float: left;
-    display: block;
-    color: #ED3d63;
-    text-align: center;
-    padding: 12px 12px;
-    text-decoration: none;
-    text-transform: uppercase;
-    font-size: 16px;
-    font-weight: 800;
+  float: left;
+  display: block;
+  color: #C780C8;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
 }
 
-.topnav a.hover {
-    background-color: #6a5acd;
-    color: white;
-}
-
-.topnav .active {
-    background-color: lavender;
+.topnav a.active {
+  background-color: #fff;
+  color: white;
 }
 
 .topnav .icon {
-    display: none;
+  display: none;
 }
 
-/* Responsive rules - apply when screen width is less than 1200px */
+/* END MOBILE NAV STYLES */
 
-@media screen and (max-width: 1199px) {
-    .topnav a:not(:first-child) {
+
+/* MAIN CONTENT STYLES */
+
+#homepageimg {
+    float:right;
+    width: 50%;
+    padding-bottom: 2em;
+    margin-left: 3em;
+}
+
+#aboutimg, #concept, #mind_palace, #courage, #dreamy_rain, #time {
+    float: left;
+    width: 50%;
+    padding-bottom: 2em;
+    margin-right: 3em;
+}
+
+#content {
+    padding: 3em;
+    color: #808080;
+}
+
+#quoteauthor {
+    color: #BDD854;
+}
+
+#gallery .thumbnail {
+    display: inline;
+    width: 45%;
+    padding: 1em;
+}
+
+#gallery h2 {
+    display: flex;
+    justify-content: center;
+}
+
+.thumbnail:hover {
+    opacity: 0.5;
+}
+
+main {
+    background-color: #fff;
+    width: 100%;
+    margin: auto;
+}
+
+body {
+    font-family: 'Karla';
+    color: #808080;
+    font-size: 1em;
+}
+
+
+a {
+    font-family: 'Montserrat';
+    color: #808080;
+    text-transform: uppercase;
+    text-decoration: none;
+    font-weight:bold;
+    padding-bottom: 1em;
+}
+
+a:hover {
+    font-weight:500;
+}
+
+.active {
+    font-weight:100;
+}
+
+p {
+    font-size:1em;
+    font-family: 'Karla';
+
+}
+
+
+/* END MAIN CONTENT STYLES */
+
+
+/* BUTTON STYLES */
+
+.button {
+  display: inline-block;
+  border-radius: 4px;
+  background-color: #BDD854;
+  border: none;
+  color: #FFFFFF;
+  font-family: 'Montserrat';
+  text-align: center;
+  font-size: 14px;
+  padding: 10px;
+  width: 100px;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 5px;
+}
+
+.button span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+
+.button span:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+
+.button:hover span {
+  padding-right: 15px;
+}
+
+.button:hover span:after {
+  opacity: 1;
+  right: 0;
+}
+
+/* END BUTTON STYLES */
+
+
+/* MEDIA QUERIES FOR MOBILE NAV */
+
+@media screen and (min-width:852px) {
+    .topnav {
+        display:none
+    }
+}
+
+@media screen and (max-width: 851px) {
+  .topnav a:not(:first-child) {
+      display: none;
+    }
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+}
+
+@media screen and (max-width: 851px) {
+  .topnav.responsive {
+      position: relative;
+    }
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: right;
+    margin-top: 0.5em;
+  }
+}
+
+@media all and (max-width: 851px) {
+    #logo {
+        float: left;
+        width: 100px;
+        height: 52px;
+    }
+    
+    #homepageimg {
+        display: block;
+        width: 100%;
+    }
+    
+    #desktopnav {
         display: none;
     }
     
-    .topnav a.icon {
-        float: right;
-        display: block;
-    }
-    
-    .topnav.responsive {
-        position: relative;
-    }
-    
-    .topnav.responsive a {
-        float: none;
-        display: block;
-        text-align: left;
-    }
-    
-    .topnav.responsive a.icon {
-        position: absolute;
-        right: 0;
-        top: 0;
-    }
-}
-
-
-/* DESKTOP */
-@media all and (min-width:1200px) {
-    .topnav {
-        width: 81%;
-    }
-}
-
-/* TABLET */
-@media all and (min-width:501px) and (max-width:1199px) {
-    .topnav {
-        width: 91%;
-    }
-}
-
-/* PHONE */
-@media all and (max-width:500px) {
-    .topnav {
+    #aboutimg, #concept, #mind_palace, #courage, #dreamy_rain, #time {
+        display:block;
         width: 100%;
     }
+    
+    #gallery .thumbnail {
+        display: block;
+        width: 100%;
+        padding-bottom: 2em;
+    }
+    
 }
+
+/* END MEDIA QUERIES FOR MOBILE NAV */
+
+
+/* START FOOTER CONTENT STYLES */
+
+footer {
+    padding: 1em;
+    background-color: #fff;
+    color: #808080;
+    text-align: center;
+    clear: both;
+    text-transform: uppercase;
+}
+
+footer a {
+    color: #C780C8;
+    text-decoration:none;
+}
+
+/* END FOOTER CONTENT STYLES */
