--- a/web120/css/forms.css
+++ b/web120/css/forms.css
@@ -1,4 +1,4 @@
-	/* start reCAPTCHA styles */
+/* start reCAPTCHA styles */
 		
 		/* writes to small text above reCAPTCHA upon failure */
 		.dateFeedback{
@@ -8,41 +8,36 @@
 			color:#f00;
 		}
         input:required {
-              border: 1px solid red;
+              border: 1px solid grey;
         }
 
          input:optional, textarea:optional {
              background-color:#f1f1f1;
              border:1px solid #ccc;
+             width: 200px;
         }
 
         input[type="submit"], input[type="button"] {
-          background-color: #fff;
+          color: white;
+          background-color: #C780C8;
           border-radius: 4px;
-          border: solid 1px #fbc;
-          padding: 0.5em 0.5em;
+          padding: 0.3em 0.5em;
+          width: 200px;
+          text-transform: uppercase;
         }
 
         fieldset {
-          border: 1px solid #fbc;
-          max-width: 350px;
+          border: 1px solid #ccc;
+          max-width: 400px;
         }
 
         legend {
-          margin-left: 10.5em;
+          margin-left: 0.5em;
           padding: 0.2em 0.5em;
           border-left: 1px solid #ccc;
           border-right: 1px solid #ccc;
         }
-        main.wrapper {
-        padding-left: 2em;
-        }
 
-        /* end reCAPTCHA styles */
-/* keeps form from bunching up to left */
-@media all and (min-width:501px){
-    div.wrapper form{
-        margin-left:22.8px;
+        
+/* end reCAPTCHA styles */
 
-    }
-}
