--- a/web120/fp/css/fp.css
+++ b/web120/fp/css/fp.css
@@ -23,7 +23,7 @@ nav a {
     color:#C780C8;
 }
 
-#logo {
+.logo {
     width: 200px;
     height: 105px;
 }
@@ -236,7 +236,7 @@ p {
 
 
 @media all and (max-width: 851px) {
-    #logo {
+    .logo {
         float: left;
         width: 100px;
         height: 52px;
@@ -262,7 +262,6 @@ p {
         display: block;
         width: 100%;
         padding-bottom: 2em;
-        overflow: none;
     }
     
 }
